# dnf5

dnf5-plugins/: CMakeLists.txt
dnf5-plugins/downloadurl_plugin/: CMakeLists.txt  downloadurl.cpp  downloadurl.hpp  downloadurl_cmd_plugin.cpp
libdnf5-cli/output/: .search.cpp.swp  search.cpp  transaction_table.cpp
